# atlas

./: .env.testnet  .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  dex.testnet.json  dfx.dev.json  dfx.json  dfx.testnet.json  eslint.config.js  package-lock.json  package.json  schama
.github/workflows/: ci.yml
.husky/: pre-commit
dev-scripts/: deploy.sh  dev.sh  mintCkUSDC.sh  setSpaceLead.sh  upgrade.sh  upgradeSpace.sh
dev-scripts/deploy/: atlas_main.did
dev-scripts/upgrade/: atlas_main.did
src/atlas_backend/: Cargo.toml  atlas_backend.did
src/atlas_backend/src/: bootstrap.rs  lib.rs  state.rs  user.rs
src/atlas_frontend/: astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json
src/atlas_frontend/.astro/: settings.json
src/atlas_frontend/public/: .ic-assets.json5
src/atlas_frontend/src/: App.jsx  env.d.ts
src/atlas_frontend/src/canisters/: atlas_backend.ts  atlas_main.ts  delegatedCall.ts  errors.ts
src/atlas_frontend/src/components/: App.tsx  DiscordButton.tsx  DiscordCheckButton.tsx  Footer.tsx  Main.tsx
src/atlas_frontend/src/hooks/: balances.ts  guard.ts  identityKit.ts  space.ts
src/atlas_frontend/src/integrations/: discord.ts
src/atlas_frontend/src/layouts/: DarkBox.tsx  GradientBox.tsx  Layout.astro
src/atlas_frontend/src/modals/: CreateNewTaskModal.tsx  JoinSpaceModal.tsx  (+1 more)
src/atlas_main/: Cargo.toml  atlas_main.did
src/atlas_main/src/: Cargo.toml  bootstrap.rs  config.rs  cycles.rs  errors.rs  guard.rs  lib.rs  lifecycle.rs  management.rs  memory.rs  space.rs  user.rs
src/atlas_main/src/methods/: mod.rs  query.rs  update.rs
src/atlas_space/: Cargo.toml  atlas_space.did
src/atlas_space/src/: config.rs  cycles.rs  deposit.rs  errors.rs  funds.rs  guard.rs  lib.rs  lifecycle.rs  memory.rs  nat256.rs  state.rs
src/atlas_space/src/methods/: mod.rs  query.rs  update.rs
src/atlas_space/src/task/: mod.rs  submission.rs  token_reward.rs  xp_reward.rs
src/declarations/atlas_main/: atlas_main.did.d.ts  atlas_main.did.js  index.d.ts  index.js
src/declarations/atlas_space/: atlas_space.did  atlas_space.did.d.ts  atlas_space.did.js  index.d.ts  index.js
src/declarations/ckusdc_canister/: index.d.ts  index.js
src/declarations/ckusdc_index_canister/: index.d.ts  index.js
src/declarations/ckusdc_ledger_canister/: index.d.ts  index.js
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/shared/src/cbor/: mod.rs  nat.rs  principal.rs  principal_map.rs  tokens.rs  u256.rs
testnet-scripts/: setSpaceLead.sh
(+71 files in other folders)
