[workspace]
members = ["src/atlas_main", "src/atlas_space", "src/shared"]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
serde = "1.0.219"
serde_json = "1.0"
hex = "0.4.3"
ic-stable-structures = "0.6.8"
minicbor = { version = "0.26.4", features = ["alloc", "derive"] }
minicbor-derive = "0.16.2"
thiserror = "2.0.12"
shared = { path = "./src/shared" }
ic-ledger-types = "0.15.0"
ethnum = "1.5.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
sha2 = "0.10.9"