[package]
name = "atlas_main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.8"
minicbor = { version = "0.26.4", features = ["alloc", "derive"] }
minicbor-derive = "0.16.2"
serde = "1.0.219"
thiserror = "2.0.12"
shared = { path = "../shared"}
