[package]
name = "atlas_main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
minicbor = { workspace = true }
minicbor-derive = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
shared = { workspace = true }
sha2 = { workspace = true }
futures = "0.3"
