[package]
name = "atlas_space"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
minicbor = { workspace = true }
minicbor-derive = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
shared = { workspace = true }
ic-ledger-types = { workspace = true }
ethnum = { workspace = true }
num-bigint = { workspace = true }
icrc-ledger-types = "0.1.8"
sha2 = { workspace = true }
