[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
minicbor = { workspace = true }
ic-ledger-types = { workspace = true }
ethnum = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
